# Autocad-MCP

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  config.py  fikir.md  not.md  pyproject.toml  security.py  server.json  server.py  version.py
.claude/skills/autocad-mcp-premium/: SKILL.md
.claude/skills/autocad-mcp-premium/examples/: pid-simple-loop.md  premium-shaft.md
.claude/skills/autocad-mcp-premium/references/: corner-ops.md  iso-standards.md  meta-planning.md  premium-workflow.md
.cursor/rules/: Master-Rules.mdc
.cursor/skills/autocad-mcp/: SKILL.md
.cursor/skills/autocad-mcp/assets/: layer-standards.json
.cursor/skills/autocad-mcp/examples/: basic-workflow.md  floor-plan.md  mechanical-part.md
.cursor/skills/autocad-mcp/references/: architecture.md  security.md  tools-analysis.md  tools-batch-template.md  tools-blocks.md  tools-dimensions.md  tools-drawing.md  tools-entity-creation.md  tools-entity-modification.md  tools-layers.md  tools-view-system.md  troubleshooting.md  workflows.md
.cursor/skills/autocad-mcp/scripts/: check_setup.py  validate_drawing.py
.github/workflows/: benchmark.yml  ci.yml  release.yml
backends/: __init__.py  base.py  com_backend.py  ezdxf_backend.py
benchmarks/: README.md  __init__.py  compare_versions.py  competitors.yaml  competitors_env.py  correctness_suite.py  perf_suite.py  render_chart.py  render_live_chart.py  render_matrix_chart.py  render_perf_chart.py  run_competitors.py  source_review.json  tasks_v2.py
benchmarks/adapters/: __init__.py  autocad_mcp_pro.py  base.py  beiming_autocad.py  mcp_stdio.py  puran_water.py
benchmarks/results/published/: ab-v1.3.0-vs-v1.4.0.json  autocad-mcp-pro.json  beiming183-autocad-mcp.json  perf-ezdxf.json  puran-water-autocad-mcp.json
docs/: RELEASE-DISTRIBUTION.md
docs/analysis/: 00-RECON-dossier.md  01-DIAGNOSTICS.md  02-ROADMAP.md  _recon_raw.json
docs/superpowers/plans/: 2026-07-17-repository-cleanup-readme-benchmark.md
docs/superpowers/specs/: 2026-07-17-repository-cleanup-readme-benchmark-design.md
engineering/: __init__.py  annotation.py  critique.py  delivery.py  fits.py  gdt.py  gear.py  keyway.py  layers.py  plan_spec.py  preflight.py  refiner.py  repairs.py  scoring.py  titleblock.py  tolerances.py  validator.py
scripts/: smoke_premium.py
tests/: conftest.py  test_analysis.py  test_batch_template.py  test_benchmark_chart.py  test_benchmark_v2.py  test_capabilities.py  test_com_backend.py  test_com_sprint3.py  test_delivery.py  test_dimension_tolerances.py  test_dimensions.py  test_drawing.py  test_drawing_settings.py  test_engineering_gear.py  test_engineering_keyway.py  test_engineering_titleblock.py  test_engineering_validator.py  test_entity_corner_ops.py  test_entity_creation.py  test_entity_edit.py  test_ezdxf_backend.py  test_fits.py  test_gdt.py  test_http_auth.py  test_layer_block.py  test_layouts_solids.py  test_meta_tools.py  test_meta_tools_geometry.py  test_preflight.py  test_refiner.py  test_release_consistency.py  test_scoring.py  test_security.py  test_server_entrypoint.py  test_sprint2_fixes.py  test_sprint3_fixes.py  test_sprint4_base.py  test_sprint4_com.py  test_sprint4_ezdxf.py  test_sprint4_server.py  (+3 more)
